--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="/favicon.ico" sizes="any"> <!-- 32×32 -->
     <link rel="apple-touch-icon" href="/apple-touch-icon.png"> <!-- 180×180 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>New York City Firehouses</title>
+    <title>Firehouses in New York City</title>
   </head>
   <body>
     <div id="app"></div>
