--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!--<link rel="icon" type="image/svg+xml" href="/vite.svg" />-->
+    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <!-- Keeping favicons simple. Can add more for production model. -->
     <link rel="icon" href="/favicon.ico" sizes="any"> <!-- 32×32 -->
     <link rel="apple-touch-icon" href="/apple-touch-icon.png"> <!-- 180×180 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Firehouses in New York City</title>
+    <title>NYC Firehouses</title>
   </head>
   <body>
     <div id="app"></div>
