--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
-    <!-- Keeping favicons simple. Can add more for production model. -->
-    <link rel="icon" href="/favicon.ico" sizes="any"> <!-- 32×32 -->
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png"> <!-- 180×180 -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NYC Firehouses</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+        <!-- Keeping favicons simple. Can add more for production model. -->
+        <link rel="icon" href="/favicon.ico" sizes="any"> <!-- 32×32 -->
+        <link rel="apple-touch-icon" href="/apple-touch-icon.png"> <!-- 180×180 -->
+        <!-- Google Font - START -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&family=Roboto:ital@0;1&display=swap" rel="stylesheet">
+        <!-- Google Font - STOP -->
+        <title>NYC Firehouses</title>
+    </head>
+    <body>
+        <div id="app"></div>
+        <script type="module" src="/src/main.js"></script>
+    </body>
 </html>
